two terms are the same not no two -- typo

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             The first row and column show that \(e\) is the identity element.
             The diagonal shows that every element is its own inverse.
             Associativity is demonstrated as follows: \(e\) associates with anything since \(V\) is commutative; any product with three terms in which \(e\) is one of the terms is associative.
-            For the same reason, any product with three non-distinct terms (i.e. no two terms are the same because of self-inverses) is associative.
+            For the same reason, any product with three non-distinct terms (i.e. two terms are the same because of self-inverses) is associative.
             For any distinct \(x,y,z \in V\), none of which equal \(e\), \((xy)z = z^{2} = x^{2} = x(yz)\). Thus associativity is satisfied. V is so-called the four-group of Felix Klein.
 
 
