group identity and inverses preserved under isomorphism

--- a/index.html
+++ b/index.html
@@ -131,9 +131,30 @@
             The diagonal shows that every element is its own inverse.
             Associativity is demonstrated as follows: \(e\) associates with anything since \(V\) is commutative; any product with three terms in which \(e\) is one of the terms is associative.
             For the same reason, any product with three non-distinct terms (i.e. two terms are the same, thus self-inverses) is associative.
-            For any distinct \(x,y,z \in V\), none of which equal \(e\), \((xy)z = z^{2} = x^{2} = x(yz)\). Thus associativity is satisfied. V is so-called the four-group of Felix Klein.
-
-
+            For any distinct \(x,y,z \in V\), none of which equal \(e\), \((xy)z = z^{2} = x^{2} = x(yz)\). Thus associativity is satisfied. ☯
+            
+        <p>
+            V is the so-called four-group of Felix Klein.
+    </section>
+    <section class="theorem">
+        <p>
+            Let \(a\) be an element \( \in\) a group \(G\).
+            Let there be a mapping \(\lambda_{a} \colon G \rightarrow G\) 
+                given by \(\lambda_{a}g=ag\) for any element \(g \in G\).
+            Suppose there is an element \(h \in G\) such that \(ag=ah\).
+            By cancellation, \(h=g\). Thus distinct elements \(\in G\) are mapped to distinct images. Thus \(\lambda_{a}\) is injective.
+            Since \(\lambda_{a}\) is a finite injective endomorphism, it must be surjective.
+            Hence \(\lambda_{a}\) is a one-to-one correspondence, a bijection. ☯
+    </section>
+    <section class="theorem">
+        <p>
+            A group \(G\) is isomorphic to a group \(G'\) if there exists a one-to-one correspondence:
+                \(\phi \colon G \rightarrow G'\) such that \(\phi(ab) = \phi(a)\phi(b)\).
+            In \(G\), \(ae=a\) must map to \(\phi(e)\phi(a) = \phi(a)\).
+            Let \(\phi(e)=e'\), \(\phi(a)=a'\). We have \(e'a'=a'\).
+            Similarly, \(a^{-1}a=e\) maps to \(\phi(a^{-1})\phi(a)=e'\).
+            Let \(\phi(a^{-1})=a'^{-1}\), \(\phi(a)=a'\).
+            We have \(a'^{-1}a'=e'\) for all \(a' \in G'\). Hence such a mapping preserves identity and inverses.
 
     
     </section>
